--- a/src/pages/Popup/Popup.css
+++ b/src/pages/Popup/Popup.css
@@ -1,17 +1,19 @@
-.ex-container {
+.container {
   display: flex;
   flex-direction: column;
-  width: 212px;
+  width: 300px;
+  padding: 1rem;
+  background: #000000cc;
+  z-index: 9999;
+  gap: 1rem;
 }
 
-.ex-header {
-  background-color: #00c2ff;
+.header {
+  /* background-color: #110100; */
   display: flex;
   flex-direction: column;
-  align-items: center;
-
+  gap: 0.4rem;
   width: 100%;
-  height: 274px;
 }
 
 .mt-48 {
@@ -30,6 +32,18 @@
   color: #000000;
 }
 
+.fs-xl {
+  font-size: 1.5rem;
+}
+
+.fs-lg {
+  font-size: 1.25rem;
+}
+
+.fs-md {
+  font-size: 1rem;
+}
+
 .fs-sm {
   font-size: 0.625rem;
 }
@@ -38,20 +52,31 @@
   font-size: 0.6rem;
 }
 
-.main-txt-adj {
-  margin: 4px 0 12px;
+.section {
+  display: flex;
+  flex-direction: column;
+  gap: 0.35rem;
+  width: 100%;
 }
 
-.ex-body {
+.footer {
   display: flex;
-  align-items: center;
-  justify-content: space-between;
-
-  padding: 4px 16px 0;
-}
-
-.ex-footer {
-  display: flex;
+  /* background-color: #110100; */
   justify-content: center;
   margin: 12px 0;
+}
+
+.button {
+  all: unset;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 40px;
+  border-radius: 4px;
+  background-color: #2fc0db;
+  color: white;
+  font-size: 0.875rem;
+  font-weight: 500;
+  cursor: pointer;
 }
