--- a/src/pages/Content/content.styles.css
+++ b/src/pages/Content/content.styles.css
@@ -23,3 +23,10 @@
   border-radius: 8px;
   box-shadow: 0 0 0.5rem 0.1rem #000000;
 }
+.primaryColumn .body {
+  display: flex;
+  height: 400px;
+  width: 100%;
+  align-items: center;
+  justify-content: center;
+}
