--- a/src/pages/Content/content.styles.css
+++ b/src/pages/Content/content.styles.css
@@ -100,7 +100,7 @@
 /* Modal */
 .modalWrapper {
   position: fixed;
-  top: 20rem;
+  top: 0;
   left: 50%;
   transform: translateX(-50%);
   backdrop-filter: blur(16px);
@@ -118,24 +118,32 @@
   display: flex;
   padding: 10px 12px;
   flex-direction: column;
-  background-color: #ffffff;
+  background-color: #000;
   width: min(100%, 400px);
+}
+.modal .modalHeader {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
 }
 .inputBox {
   display: flex;
   flex-direction: column;
+  background-color: #202537;
+  padding: 0.75rem 1rem;
+  border-radius: 12px;
+  border: 1px solid rgb(156 163 175);
 }
 .inputBox .text {
   margin: 0;
-  margin-bottom: 0.5rem;
   font-size: 13px;
   font-weight: 500;
 }
-.inputBox .arrow {
-  padding: 0.5rem;
+.arrow {
+  padding: 0.25rem;
   border-radius: 0.5rem;
-  width: 35px;
-  height: 35px;
+  width: 15px;
+  height: 15px;
   cursor: pointer;
   border: 3px solid #243c5a;
   margin: auto;
@@ -145,16 +153,32 @@
   left: 50%;
   transform: translate(-50%, -50%);
   background-color: #e4dce4;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
-.inputBox .arrow:hover {
+.arrow:hover {
   transform: translate(-50%, -50%) rotate(180deg);
 }
 
 .swapButton {
-  width: 100%;
+  all: unset;
+  /* width: 100%; */
   cursor: pointer;
   border-radius: 12px;
-  padding: 0.5rem 0;
+  padding: 0.75rem 0;
+  text-transform: uppercase;
+  text-align: center;
+  font-weight: 500;
+  font-size: 14px;
+  background-color: #324062;
+  color: #ffffff;
+  border: none;
+  transition: all 300ms;
+  margin: 0 1rem;
+}
+.swapButton:hover {
+  background-color: #243c5a;
 }
 
 .inputBox .inputDiv {
@@ -163,19 +187,38 @@
   gap: 1rem;
   margin: 0.5rem 0;
 }
-.inputBox .inputDiv .tokenTickerDiv {
+.inputBox .tokenTicker {
   display: flex;
   align-items: center;
   justify-content: center;
 }
 
-.inputBox .inputDiv .tokenTickerDiv img {
+.inputBox img {
   width: 24px;
   height: 24px;
 }
-.inputBox .inputDiv input {
+.inputBox input {
+  all: unset;
+  width: 100%;
   font-size: 30px;
   color: white;
+  background: transparent;
+  outline: none;
+  text-align: right;
+}
+.inputBox input:disabled {
+  color: rgb(107, 114, 128);
+  background: transparent;
+  border: transparent;
+}
+
+.inputBox input:focus {
+  outline: none;
+}
+
+.inputBox input::placeholder {
+  color: #ffffff;
+  opacity: 0.5;
 }
 
 /* SVG */
