--- a/src/pages/Content/content.styles.css
+++ b/src/pages/Content/content.styles.css
@@ -163,7 +163,6 @@
 
 .swapButton {
   all: unset;
-  /* width: 100%; */
   cursor: pointer;
   border-radius: 12px;
   padding: 0.75rem 0;
@@ -175,7 +174,6 @@
   color: #ffffff;
   border: none;
   transition: all 300ms;
-  margin: 0 1rem;
 }
 .swapButton:hover {
   background-color: #243c5a;
@@ -219,6 +217,23 @@
 .inputBox input::placeholder {
   color: #ffffff;
   opacity: 0.5;
+}
+.inputBox input[type='number']::-webkit-inner-spin-button,
+.inputBox input[type='number']::-webkit-outer-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+/* Firefox */
+.inputBox input[type='number'] {
+  -moz-appearance: textfield;
+  appearance: textfield;
+}
+
+/* SVG */
+.svgSize {
+  width: 1.5rem;
+  height: 1.5rem;
 }
 
 /* SVG */
