--- a/src/pages/Content/content.styles.css
+++ b/src/pages/Content/content.styles.css
@@ -281,14 +281,14 @@
 }
 
 /* Button for Trade */
-.trade_section {
+.x_defi-purchase-created {
   display: flex;
-  margin: 0.5rem 0;
+  margin: 0.5rem 0 0;
   justify-content: space-between;
 }
 .trade_button {
   color: #ffffff;
-  border: 1px solid #2ffc2b;
+  border: 1px solid;
   border-radius: 41px;
   padding: 0.5rem 1rem;
   text-align: center;
@@ -296,4 +296,8 @@
   font-size: 13px;
   transition: all 300ms;
   cursor: pointer;
+}
+.trade_button:hover {
+  border-radius: 10px;
+  scale: 1.1;
 }
