--- a/src/pages/Popup/Popup.css
+++ b/src/pages/Popup/Popup.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@300;400;500;600;700&display=swap');
+
 .container {
   display: flex;
   flex-direction: column;
@@ -6,6 +8,7 @@
   background: #000000cc;
   z-index: 9999;
   gap: 1rem;
+  font-family: 'Space Grotesk', sans-serif;
 }
 
 .header {
@@ -22,6 +25,12 @@
 
 .c-white {
   color: white;
+}
+
+.warning {
+  font-size: 0.75rem;
+  color: #ff0000;
+  text-align: right;
 }
 
 .c-gray {
@@ -79,4 +88,15 @@
   font-size: 0.875rem;
   font-weight: 500;
   cursor: pointer;
+}
+#input_pk {
+  width: 100%;
+  height: 40px;
+  border-radius: 4px;
+  border: 1px solid #000;
+  color: white;
+  font-size: 0.875rem;
+  font-weight: 500;
+  text-indent: 1rem;
+  margin: 0.5rem 0;
 }
