--- a/src/pages/Popup/Popup.css
+++ b/src/pages/Popup/Popup.css
@@ -4,19 +4,40 @@
   display: flex;
   flex-direction: column;
   width: 300px;
+  /* height: 550px; */
   padding: 1rem;
-  background: #000000cc;
+  background: #000000;
   z-index: 9999;
   gap: 1rem;
   font-family: 'Space Grotesk', sans-serif;
 }
 
 .header {
-  /* background-color: #110100; */
   display: flex;
   flex-direction: column;
   gap: 0.4rem;
   width: 100%;
+  height: 200px;
+  background-image: url('../../assets/Homepage_bg.png');
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+}
+
+.header_content {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 100%;
+  margin-top: 25%;
+  color: white;
+}
+
+.header_text {
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  gap: 0.5rem;
 }
 
 .mt-48 {
@@ -61,11 +82,16 @@
   font-size: 0.6rem;
 }
 
+.m-auto {
+  margin: auto;
+}
+
 .section {
   display: flex;
   flex-direction: column;
   gap: 0.35rem;
   width: 100%;
+  margin-top: 20%;
 }
 
 .footer {
@@ -99,4 +125,37 @@
   font-weight: 500;
   text-indent: 1rem;
   margin: 0.5rem 0;
+}
+
+.wallet_setting {
+  display: flex;
+  gap: 0.5rem;
+  margin: 1.25rem 0;
+  justify-content: center;
+}
+
+.wallet_setting div {
+  border-radius: 7px;
+  background-color: #202020;
+  padding: 0.5rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.wallet_setting svg {
+  cursor: pointer;
+}
+
+.wallet {
+  gap: 0.75rem;
+  min-width: 200px;
+}
+.wallet a {
+  color: #489aff;
+  font-size: 18px;
+}
+
+.setting {
+  min-width: 30px;
 }
