--- a/src/pages/Popup/index.css
+++ b/src/pages/Popup/index.css
@@ -1,4 +1,7 @@
 /* Eric Meyer's Reset CSS */
+@import 'tailwindcss/base';
+@import 'tailwindcss/components';
+@import 'tailwindcss/utilities';
 
 /* Box sizing reset */
 *,
