--- a/src/pages/Popup/Settings.css
+++ b/src/pages/Popup/Settings.css
@@ -1,9 +1,22 @@
 @import url('https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@300;400;500;600;700&display=swap');
 
+/* Chrome, Safari, Edge, Opera */
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+/* Firefox */
+input[type='number'] {
+  appearance: textfield;
+  -moz-appearance: textfield;
+}
+
 .container {
   display: flex;
   flex-direction: column;
-  width: 300px;
+  width: 400px;
   /* height: 550px; */
   padding: 1rem;
   background: #000000;
@@ -17,8 +30,8 @@
   flex-direction: column;
   gap: 0.4rem;
   width: 100%;
-  height: 200px;
-  background-image: url('../../assets/Homepage_bg.png');
+  height: 120px;
+  background-image: url('../../assets/Settings_bg.png');
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
@@ -91,71 +104,52 @@
   flex-direction: column;
   gap: 0.35rem;
   width: 100%;
-  margin-top: 20%;
 }
 
-.footer {
+.slippage {
+  color: #fff;
   display: flex;
-  /* background-color: #110100; */
-  justify-content: center;
-  margin: 12px 0;
+  gap: 0.6rem;
 }
 
-.button {
-  all: unset;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 100%;
-  height: 40px;
-  border-radius: 4px;
-  background-color: #2fc0db;
-  color: white;
-  font-size: 0.875rem;
-  font-weight: 500;
-  cursor: pointer;
-}
-#input_pk {
-  width: 100%;
-  height: 40px;
-  border-radius: 4px;
-  border: 1px solid #000;
-  color: white;
-  font-size: 0.875rem;
-  font-weight: 500;
-  text-indent: 1rem;
-  margin: 0.5rem 0;
+.slippage h2 {
+  margin-bottom: 1rem;
 }
 
-.wallet_setting {
-  display: flex;
-  gap: 0.5rem;
-  margin: 1.25rem 0;
-  justify-content: center;
-}
-
-.wallet_setting div {
+.slippage input {
+  padding: 12px;
   border-radius: 7px;
-  background-color: #202020;
-  padding: 0.5rem;
+}
+
+.slippage__input {
+  width: 100%;
+  position: relative;
+  max-width: 150px;
+}
+
+.disabled_inputs {
   display: flex;
+  gap: 0.2rem;
+}
+
+.slippage__input__disbled {
+  max-width: 40px;
+}
+
+.slippage__input::after {
+  position: absolute;
+  content: '%';
+  top: 50%;
+  transform: translateY(-50%);
+  right: 0.5rem;
+}
+
+.buy_values {
+  margin: 1.25rem 0;
+}
+
+.buy_values__header {
+  display: flex;
+  justify-content: space-between;
   align-items: center;
-  justify-content: center;
-}
-
-.wallet_setting svg {
-  cursor: pointer;
-}
-
-.wallet {
-  gap: 0.75rem;
-  min-width: 200px;
-}
-.wallet a {
-  color: #489aff;
-  font-size: 18px;
-}
-
-.setting {
-  min-width: 30px;
 }
