--- a/src/pages/Content/content.styles.css
+++ b/src/pages/Content/content.styles.css
@@ -199,24 +199,6 @@
   transform: translate(-50%, -50%) rotate(180deg);
 }
 
-.swapButton {
-  all: unset;
-  cursor: pointer;
-  border-radius: 12px;
-  padding: 0.75rem 0;
-  text-transform: uppercase;
-  text-align: center;
-  font-weight: 500;
-  font-size: 14px;
-  background-color: #324062;
-  color: #ffffff;
-  border: none;
-  transition: all 300ms;
-}
-.swapButton:hover {
-  background-color: #243c5a;
-}
-
 .inputBox .inputDiv {
   display: flex;
   width: 100%;
@@ -287,17 +269,14 @@
   justify-content: space-between;
 }
 .trade_button {
+  background-color: rgba(17, 17, 17, 1);
   color: #ffffff;
-  border: 1px solid;
-  border-radius: 41px;
+  border: 1px solid rgba(39, 39, 39, 1);
+  border-radius: 4px;
   padding: 0.5rem 1rem;
   text-align: center;
   font-weight: 500;
-  font-size: 13px;
+  font-size: 14px;
   transition: all 300ms;
   cursor: pointer;
-}
-.trade_button:hover {
-  border-radius: 10px;
-  scale: 1.1;
 }
