--- a/src/pages/Content/content.styles.css
+++ b/src/pages/Content/content.styles.css
@@ -38,22 +38,22 @@
   padding-bottom: 2rem;
 }
 .primaryColumn .header {
-  position: sticky;
+  width: 100%;
+  display: flex;
   flex-direction: column;
-  padding: 6px;
-  top: -0.5px;
-  z-index: 3;
-  backface-visibility: hidden;
-  border-bottom: 2px solid black;
-  backdrop-filter: blur(16px) saturate(180%);
-  -webkit-backdrop-filter: blur(16px) saturate(180%);
-  background-color: rgba(17, 25, 40, 0.75);
+  padding: 16px;
+  background-color: rgba(17, 17, 17, 1);
 }
 .primaryColumn .header div {
   display: flex;
   flex-direction: column;
   gap: 0.25rem;
   margin-top: 0.2rem;
+}
+.primaryColumn .line {
+  width: 100%;
+  height: 2px;
+  background-color: rgba(40, 40, 40, 1);
 }
 .primaryColumn .table {
   margin-top: 1rem;
