--- a/src/pages/Content/content.styles.css
+++ b/src/pages/Content/content.styles.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Jura:wght@300..700&family=Space+Grotesk:wght@300;400;500;600;700&display=swap');
+
 /* View styling */
 .x_defi-view-created {
   display: flex;
@@ -34,41 +36,61 @@
 /* Portfolio columns */
 .primaryColumn {
   width: 100%;
-  padding: 0 1rem;
+  padding: 12px 20px;
   padding-bottom: 2rem;
+  background-color: #000;
 }
 .primaryColumn .header {
   width: 100%;
-  display: flex;
   flex-direction: column;
   padding: 16px;
   background-color: rgba(17, 17, 17, 1);
+  border-radius: 10px;
+  align-items: start !important;
+  gap: 0 !important;
 }
-.primaryColumn .header div {
+.primaryColumn .header .topHeader {
+  gap: 60px !important;
+  padding: 0 16px;
+}
+.primaryColumn .header .topHeader > div {
   display: flex;
+  gap: 8px;
   flex-direction: column;
-  gap: 0.25rem;
-  margin-top: 0.2rem;
+}
+.primaryColumn .header .topHeader span {
+  font-family: 'Jura', sans-serif;
+  font-optical-sizing: auto;
+  color: rgba(213, 213, 213, 1);
+  font-size: 18px;
+}
+.primaryColumn .header_text {
+  font-size: 40px;
+  font-weight: 700;
+  margin: 0.75rem 0;
+  color: #ffffff;
+  font-family: 'Jura', sans-serif;
+  font-optical-sizing: auto;
 }
 .primaryColumn .line {
   width: 100%;
   height: 2px;
   background-color: rgba(40, 40, 40, 1);
+  margin: 1rem 0;
 }
 .primaryColumn .table {
   margin-top: 1rem;
   width: 100%;
-  background-color: #010010;
+  background-color: rgba(17, 17, 17, 1);
   margin: 0.4rem 0;
-  padding: 0.2rem 0.3rem;
-  border-radius: 8px;
-  box-shadow: 0 0 0.5rem 0.1rem #000000;
+  padding: 1rem 2rem;
+  border-radius: 10px;
   display: flex;
   flex-direction: column;
   gap: 1rem;
 }
 .primaryColumn .table thead {
-  border-bottom: 1px solid #ffffff;
+  border-bottom: 1px solid rgba(69, 69, 69, 1);
 }
 .primaryColumn .table thead tr {
   padding: 8px 0;
