--- a/src/pages/Content/content.styles.css
+++ b/src/pages/Content/content.styles.css
@@ -74,7 +74,8 @@
 }
 .primaryColumn .line {
   width: 100%;
-  height: 2px;
+  height: 1px;
+  display: block;
   background-color: rgba(40, 40, 40, 1);
   margin: 1rem 0;
 }
@@ -101,7 +102,8 @@
   text-align: center;
   display: flex;
   align-items: center;
-  justify-content: center;
+  justify-content: flex-start;
+  padding: 4px 8px;
 }
 .primaryColumn .table tbody {
   display: flex;
@@ -123,7 +125,8 @@
   text-align: center;
   display: flex;
   align-items: center;
-  justify-content: center;
+  justify-content: flex-start;
+  padding: 4px 8px;
 }
 /* .primaryColumn .table tbody td:first-child {
   justify-content: flex-start;
