test webpack bundler

--- a/src/pages/Popup/Popup.css
+++ b/src/pages/Popup/Popup.css
@@ -1,5 +1,18 @@
 @import url('https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@300;400;500;600;700&display=swap');
 
+/* Chrome, Safari, Edge, Opera */
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+/* Firefox */
+input[type='number'] {
+  appearance: textfield;
+  -moz-appearance: textfield;
+}
+
 .container {
   display: flex;
   flex-direction: column;
@@ -158,4 +171,57 @@
 
 .setting {
   min-width: 30px;
+}
+
+/* Settings Page */
+.header_settings {
+  background-image: url('../../assets/Settings_bg.png');
+}
+
+.slippage {
+  color: #fff;
+  display: flex;
+  gap: 0.6rem;
+}
+
+.slippage h2 {
+  margin-bottom: 1rem;
+}
+
+.slippage input {
+  padding: 12px;
+  border-radius: 7px;
+}
+
+.slippage__input {
+  width: 100%;
+  position: relative;
+  max-width: 150px;
+}
+
+.disabled_inputs {
+  display: flex;
+  gap: 0.2rem;
+}
+
+.slippage__input__disbled {
+  max-width: 40px;
+}
+
+.slippage__input::after {
+  position: absolute;
+  content: '%';
+  top: 50%;
+  transform: translateY(-50%);
+  right: 0.5rem;
+}
+
+.buy_values {
+  margin: 1.25rem 0;
+}
+
+.buy_values__header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
