Tweet injection styles complete

--- a/src/pages/Content/content.styles.css
+++ b/src/pages/Content/content.styles.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Jura:wght@300..700&display=swap');
 /* View styling */
 .x_defi-view-created {
   display: flex;
@@ -285,19 +286,20 @@
   display: flex;
   margin: 0.5rem 0 0;
   justify-content: space-between;
+  gap: 1rem;
 }
 .trade_button {
   color: #ffffff;
-  border: 1px solid;
-  border-radius: 41px;
-  padding: 0.5rem 1rem;
+  border: 1px solid #272727;
+  background-color: #111111;
+  border-radius: 4px;
+  padding: 0.75rem 1rem;
   text-align: center;
   font-weight: 500;
-  font-size: 13px;
-  transition: all 300ms;
+  font-size: 14px;
   cursor: pointer;
-}
-.trade_button:hover {
-  border-radius: 10px;
-  scale: 1.1;
+  font-family: 'Jura', sans-serif;
+  font-optical-sizing: auto;
+  font-style: normal;
+  width: 100%;
 }
