--- a/src/pages/Content/content.styles.css
+++ b/src/pages/Content/content.styles.css
@@ -33,46 +33,95 @@
 }
 
 /* Portfolio columns */
+:root {
+  --calc_padding: 30px;
+}
+
 .primaryColumn {
   width: 100%;
   padding: 0 1rem;
   padding-bottom: 2rem;
+  font-family: 'Jura', sans-serif;
+  font-optical-sizing: auto;
+  font-style: normal;
 }
 .primaryColumn .header {
-  position: sticky;
-  flex-direction: column;
-  padding: 6px;
-  top: -0.5px;
-  z-index: 3;
-  backface-visibility: hidden;
-  border-bottom: 2px solid black;
-  backdrop-filter: blur(16px) saturate(180%);
-  -webkit-backdrop-filter: blur(16px) saturate(180%);
-  background-color: rgba(17, 25, 40, 0.75);
-}
-.primaryColumn .header div {
   display: flex;
   flex-direction: column;
-  gap: 0.25rem;
-  margin-top: 0.2rem;
+  padding: 20px 0;
+  background-color: #111111;
+  width: 100%;
+  border-radius: 12px;
+  margin-top: 1rem;
+}
+.primaryColumn .header .line {
+  height: 1px;
+  background: #282828;
+  width: calc(100% - var(--calc_padding));
+  margin: 1.2rem 0;
+}
+.primaryColumn .header .headerNode {
+  flex-direction: row;
+  width: calc(100% - var(--calc_padding));
+  gap: 1.5rem !important;
+  align-items: baseline !important;
+}
+.primaryColumn .headerNode div {
+  flex-direction: column;
+  align-items: flex-start;
+}
+.primaryColumn .headerNode span {
+  font-family: 'Jura', sans-serif;
+  font-optical-sizing: auto;
+  font-style: normal;
+  font-size: 14.5px;
+  font-weight: 300;
+  text-align: left;
+  color: #d5d5d5;
+}
+.headerText {
+  color: #ffffff !important;
+  font-weight: 500 !important;
+  margin-bottom: 0.25rem;
+}
+.x1 {
+  font-size: 26px !important;
+}
+.x2 {
+  font-size: 20px !important;
+}
+.x3 {
+  font-family: 'Jura', sans-serif;
+  font-optical-sizing: auto;
+  font-style: normal;
+  font-size: 12px;
+  font-weight: 500;
+  width: calc(100% - var(--calc_padding));
+  color: #489aff;
 }
 .primaryColumn .table {
-  margin-top: 1rem;
   width: 100%;
-  background-color: #010010;
-  margin: 0.4rem 0;
-  padding: 0.2rem 0.3rem;
-  border-radius: 8px;
-  box-shadow: 0 0 0.5rem 0.1rem #000000;
+  background-color: #111111;
+  margin: 1rem 0;
+  padding: 8px 0;
+  border-radius: 12px;
   display: flex;
   flex-direction: column;
   gap: 1rem;
 }
 .primaryColumn .table thead {
-  border-bottom: 1px solid #ffffff;
+  border-bottom: 1px solid #282828;
+}
+tr {
+  width: calc(100% - var(--calc_padding)) !important;
+  margin: auto;
+}
+th,
+td {
+  justify-content: flex-start !important;
 }
 .primaryColumn .table thead tr {
-  padding: 8px 0;
+  padding: 8px 0 12px;
   justify-content: unset !important;
 }
 .primaryColumn .table thead tr th {
